Ajout de la listview et du dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">LolTeams</string>
     <string name="action_settings">Paramètres</string>
     <string name="action_add">Ajouter un joueur</string>
+    <string name="cancel">Annuler</string>
 </resources>
